added service Cart

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -32,7 +32,7 @@
             <div class="container mt-3">
                 <div class="row">
                     <div class="col-12">
-                        <h3>Cele mai noi produse</h3>
+                        <h3 class="mt-3">Cele mai noi produse</h3>
                     </div>
                     {% for product in products %}
                         {{ include ('default/product/productCard.html.twig') }}
