--- a/templates/default/product/productCard.html.twig
+++ b/templates/default/product/productCard.html.twig
@@ -6,12 +6,12 @@
                 <h5 style="height: 40px" class="card-title">{{ product.name }}</h5>
                 <p><a href={{ url('vendor', {'vendor':product.getVendor().id}) }}>{{ product.getVendor().name }}</a></p>
                 <p>
-                    <h5><s>{{ product.price |number_format(2, '.', '.') }} <span>Lei</span></s>
+                    <h5><s>{{ product.price |number_format(2, ',', '.') }} <span>Lei</span></s>
                     <span>(-{{ product.discount }}%)</span>
                     </h5>
-                    <h4 style="color: red;">{{ product.getFinalPrice() |number_format(2, '.', '.') }} <span>Lei</span></h4>
+                    <h4 style="color: red;">{{ product.getFinalPrice() |number_format(2, ',', '.') }} <span>Lei</span></h4>
                 </p>
-                <a href="#" class="btn btn-secondary">Adauga in cos</a>
+                <a href="{{ url('cart_add', {'product':product.id}) }}" class="btn btn-secondary">Adauga in cos</a>
             </div>
         </div>
     </div>
