--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -61,10 +61,10 @@
                         </div>
                         <div class="col-3">
                             <div>
-                                <h5><s>{{ product.price |number_format(2, '.', '.') }}</s> Lei (-{{ product.discount }}%)</h5>
-                                <h3 style="color: red">{{ product.finalPrice |number_format(2, '.', '.') }} Lei</h3>
+                                <h5><s>{{ product.price |number_format(2, ',', '.') }}</s> Lei (-{{ product.discount }}%)</h5>
+                                <h3 style="color: red">{{ product.finalPrice |number_format(2, ',', '.') }} Lei</h3>
                             </div>
-                            <a href="#" class="btn btn-secondary w-100 mt-4">Adauga in Cos</a>
+                            <a href="{{ url('cart_add', {'product':product.id}) }}" class="btn btn-secondary w-100 mt-4">Adauga in Cos</a>
                         </div>
                     </div>
                 </div>
