--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Cauti {% endblock %}
+{% block title %}Cauti {{ app.request.request.all['form']['search'] }}? {% endblock %}
 
 {% block body %}
     <div class="container-fluid bg-light">
-        <div class="container">
+        <div class="container bg-light">
             <div class="row">
                 <div class="col-12 mt-3">
-                    <h2>Cautari</h2>
+                    <h2>Cautari pentru {{ app.request.request.all['form']['search'] }}</h2>
                 </div>
                 {% for product in products %}
                     {{ include ('default/product/productCard.html.twig') }}
