--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -4,14 +4,26 @@
 
 {% block body %}
     <div class="container-fluid bg-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 mt-3">
-                    <h2>{{ category.name }} </h2> <strong><p>{{ category.getProducts()|length }} produse</p></strong>
+        <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-                {% for product in category.getProducts() %}
-                    {{ include ('default/product/productCard.html.twig') }}
-                {% endfor %}
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-12 mt-3" style="margin-left: 20px">
+                        <h2>{{ category.name }} </h2> <strong><p>{{ category.getProducts()|length }} produse</p></strong>
+                    </div>
+                    {% for product in category.getProducts() %}
+                        {{ include ('default/product/productCard.html.twig') }}
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
