--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} - GEN Market{% endblock %}
+{% block title %}{{ product.name }} - GEN Market{% endblock %}
 
 {% block body %}
     <div class="container-fluid bg-white">
