--- a/templates/default/vendor.html.twig
+++ b/templates/default/vendor.html.twig
@@ -4,14 +4,19 @@
 
 {% block body %}
     <div class="container-fluid bg-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 mt-3">
-                    <h2>{{ vendor.name }} </h2> <strong><p>{{ vendor.getProducts()|length }} produse</p></strong>
+        <div class="row">
+            <div class="col-2 border bg-white" style="margin-left: 15px; height: 350px; margin-top: 80px">
+                {{ form(form) }}
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-12 mt-3" style="margin-left: 20px">
+                        <h2>{{ vendor.name }} </h2>
+                    </div>
+                    {% for product in products %}
+                        {{ include ('default/product/productCard.html.twig') }}
+                    {% endfor %}
                 </div>
-                {% for product in vendor.getProducts() %}
-                    {{ include ('default/product/productCard.html.twig') }}
-                {% endfor %}
             </div>
         </div>
     </div>
