--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -7,7 +7,7 @@
         <div class="container bg-light">
             <div class="row">
                 <div class="col-12 mt-3">
-                    <h2>Cautari pentru {{ app.request.request.all['form']['search'] }}</h2>
+                    <h2>Cautari pentru "{{ app.request.request.all['form']['search'] }}"</h2>
                 </div>
                 {% for product in products %}
                     {{ include ('default/product/productCard.html.twig') }}
