--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,7 +12,7 @@
                             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                         {% endif %}
 
-                        <h1 class="h3 mb-3 font-weight-normal">Autenfica-te</h1>
+                        <h1 class="h3 mb-3 font-weight-normal">Autentifica-te</h1>
                         <label for="inputEmail">Email</label>
                         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
                         <label for="inputPassword">Password</label>
